Codigo Ejemplo/1. Principios Universales de Diseño Software/1.2 Programa a una interfaz/CompaniaDeSoftware/src/main/java/org/example/bad/Tester.java
package org.example.bad;

public class Tester {

    public String realizarTest(){
        return "Test realizado con exito";
    }
}
